manifests/prod/prev/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: prod
  labels:
    app: bookmark-app
    tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - name: bookmark-app-client
        image: wajeeh8/bookmark-app:clientlatest
        command: ["sh", "-c"]
        args: ['sed -i  "s/endpoint/https:\/\/api.bookmark.com/g" build/static/js/main.3ae9d6e4.js && serve -s build']
