manifests/prod/prev/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: prod
  labels:
    tier: db
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      containers:
      - name: db
        image: wajeeh8/mysqlk8s
        securityContext:
          runAsUser: 999
          runAsGroup: 999
          allowPrivilegeEscalation: false
          capabilities:
            drop:
             - ALL
        livenessProbe:
          exec:
            command: ["mysqladmin", "ping", "-u", "root", "-proot"]
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command: ["mysql", "-h", "127.0.0.1", "-u", "root", "-proot", "-e", "SELECT 1"]
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 1
        volumeMounts:  
        - name: db-pv
          mountPath: /var/lib/mysql
      volumes:
       - name: db-pv
         persistentVolumeClaim:
           claimName: db-pvc
