manifests/prod/prev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
     - bookmark.com
     - api.bookmark.com
    secretName: tls-secret
  rules:
  - host: bookmark.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: clientsvc
            port:
              number: 80
  - host: api.bookmark.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: apisvc
            port:
              number: 80
